# ubs-trade-dashboard

./: .env  Cargo.toml  README.md  index.html
assets/: index-B7ivIwGm.js  index-BZX2c5ZZ.css  index-CEBR-dBJ.css
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/contexts/: api_docs.rs  logger.rs  model.rs
backend/src/handlers/: chart_handler.rs  data_handler.rs  generic_handler.rs
backend/src/services/: chart_service.rs  data_service.rs  generic_service.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/data/: menu.json
frontend/src/: App.svelte  app.css  main.js
frontend/src/app/: index.js
frontend/src/lib/: BarChart.svelte  BootatrapTable.svelte  Header.svelte  LineChart.svelte  ModalContainer.svelte  ModalFilter.svelte  Navigation.svelte
frontend/src/routes/: dashboard.svelte  home.svelte  login.svelte  profile.svelte  setting.svelte
src/: main.rs
src/contexts/: connection.rs  model.rs
src/services/: generic_service.rs
