[package]
name = "ubs-trade-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tiberius = { version="0.12.3" , features = ["sql-browser-tokio", "chrono"]}
uuid = "1.15.1"
futures = "0.3.31"
tokio-stream = "0.1.17"
aes = "0.8.4"
base64 = "0.22.1"
bigdecimal = { version = "0.4.7", features = ["serde"] }
ctr = "0.9.2"
env_logger = "0.11.6"
jsonwebtoken = "9.3.1"
log = "0.4.26"
sha2 = "0.10.8"
once_cell = "1.20.3"
bb8 = "0.9.0"
bb8-tiberius = "0.16.0"
dotenvy = "0.15.7"
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.0"
actix-cors = "0.7.0"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
image = "0.25.5"
handlebars = "6.3.1"
actix-files = "0.6.6"
printpdf = "0.7.0"
rust_decimal = "1.37.1"

# DEPENDENCIES SWAGGER UI
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web"] }